// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/Accordion/Accordion Defaults smoke-test 1`] = `
<div data-test-block="true">
  <div class>
    <div class="_accordionItem_s20jy_1">
      <div class="_tag_s20jy_11">
        <button class="_header_s20jy_14  _header_medium_s20jy_75"
                aria-expanded="false"
                type="button"
        >
          <div class="_titleWrapper_s20jy_80">
            <div class="_title_s20jy_80 _title_medium_s20jy_104">
              Meg selv
            </div>
          </div>
          <div class="_iconWrapper_s20jy_84 _iconWrapper_medium_s20jy_90">
            <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_s20jy_18 _chevron_medium_s20jy_33 _chevron_closed_s20jy_30"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
              </path>
            </svg>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tester/Accordion/Accordion WithAllColorVariants smoke-test 1`] = `
<div data-test-block="true">
  <div class="bottomSpacingXL">
    <div class="_accordionItem_s20jy_1">
      <div class="_tag_s20jy_11">
        <button class="_header_s20jy_14  _header_medium_s20jy_75"
                aria-expanded="false"
                type="button"
        >
          <div class="_titleWrapper_s20jy_80">
            <div class="_title_s20jy_80 _title_medium_s20jy_104">
              Meg selv
            </div>
            <p class="_subtitle_s20jy_111">
              Beskrivelse
            </p>
          </div>
          <div class="_iconWrapper_s20jy_84 _iconWrapper_medium_s20jy_90">
            <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_s20jy_18 _chevron_medium_s20jy_33 _chevron_closed_s20jy_30"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
              </path>
            </svg>
          </div>
        </button>
      </div>
    </div>
    <div class="_accordionItem_s20jy_1">
      <div class="_tag_s20jy_11">
        <button class="_header_s20jy_14  _header_medium_s20jy_75"
                aria-expanded="false"
                type="button"
        >
          <div class="_titleWrapper_s20jy_80">
            <div class="_title_s20jy_80 _title_medium_s20jy_104">
              Meg selv
            </div>
            <p class="_subtitle_s20jy_111">
              Beskrivelse
            </p>
          </div>
          <div class="_iconWrapper_s20jy_84 _iconWrapper_medium_s20jy_90">
            <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_s20jy_18 _chevron_medium_s20jy_33 _chevron_closed_s20jy_30"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
              </path>
            </svg>
          </div>
        </button>
      </div>
    </div>
  </div>
  <div class="_accordion_burgundy_1hopi_14 bottomSpacingXL">
    <div class="_accordionItem_s20jy_1">
      <div class="_tag_s20jy_11">
        <button class="_header_s20jy_14  _header_medium_s20jy_75"
                aria-expanded="false"
                type="button"
        >
          <div class="_titleWrapper_s20jy_80">
            <div class="_title_s20jy_80 _title_medium_s20jy_104">
              Meg selv
            </div>
            <p class="_subtitle_s20jy_111">
              Beskrivelse
            </p>
          </div>
          <div class="_iconWrapper_s20jy_84 _iconWrapper_medium_s20jy_90">
            <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_s20jy_18 _chevron_medium_s20jy_33 _chevron_closed_s20jy_30"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
              </path>
            </svg>
          </div>
        </button>
      </div>
    </div>
    <div class="_accordionItem_s20jy_1">
      <div class="_tag_s20jy_11">
        <button class="_header_s20jy_14  _header_medium_s20jy_75"
                aria-expanded="false"
                type="button"
        >
          <div class="_titleWrapper_s20jy_80">
            <div class="_title_s20jy_80 _title_medium_s20jy_104">
              Meg selv
            </div>
            <p class="_subtitle_s20jy_111">
              Beskrivelse
            </p>
          </div>
          <div class="_iconWrapper_s20jy_84 _iconWrapper_medium_s20jy_90">
            <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_s20jy_18 _chevron_medium_s20jy_33 _chevron_closed_s20jy_30"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
              </path>
            </svg>
          </div>
        </button>
      </div>
    </div>
  </div>
  <div class="_accordion_denim_1hopi_8 bottomSpacingXL">
    <div class="_accordionItem_s20jy_1">
      <div class="_tag_s20jy_11">
        <button class="_header_s20jy_14  _header_medium_s20jy_75"
                aria-expanded="false"
                type="button"
        >
          <div class="_titleWrapper_s20jy_80">
            <div class="_title_s20jy_80 _title_medium_s20jy_104">
              Meg selv
            </div>
            <p class="_subtitle_s20jy_111">
              Beskrivelse
            </p>
          </div>
          <div class="_iconWrapper_s20jy_84 _iconWrapper_medium_s20jy_90">
            <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_s20jy_18 _chevron_medium_s20jy_33 _chevron_closed_s20jy_30"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
              </path>
            </svg>
          </div>
        </button>
      </div>
    </div>
    <div class="_accordionItem_s20jy_1">
      <div class="_tag_s20jy_11">
        <button class="_header_s20jy_14  _header_medium_s20jy_75"
                aria-expanded="false"
                type="button"
        >
          <div class="_titleWrapper_s20jy_80">
            <div class="_title_s20jy_80 _title_medium_s20jy_104">
              Meg selv
            </div>
            <p class="_subtitle_s20jy_111">
              Beskrivelse
            </p>
          </div>
          <div class="_iconWrapper_s20jy_84 _iconWrapper_medium_s20jy_90">
            <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_s20jy_18 _chevron_medium_s20jy_33 _chevron_closed_s20jy_30"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
              </path>
            </svg>
          </div>
        </button>
      </div>
    </div>
  </div>
  <div class="_accordion_forest_1hopi_5 bottomSpacingXL">
    <div class="_accordionItem_s20jy_1">
      <div class="_tag_s20jy_11">
        <button class="_header_s20jy_14  _header_medium_s20jy_75"
                aria-expanded="false"
                type="button"
        >
          <div class="_titleWrapper_s20jy_80">
            <div class="_title_s20jy_80 _title_medium_s20jy_104">
              Meg selv
            </div>
            <p class="_subtitle_s20jy_111">
              Beskrivelse
            </p>
          </div>
          <div class="_iconWrapper_s20jy_84 _iconWrapper_medium_s20jy_90">
            <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_s20jy_18 _chevron_medium_s20jy_33 _chevron_closed_s20jy_30"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
              </path>
            </svg>
          </div>
        </button>
      </div>
    </div>
    <div class="_accordionItem_s20jy_1">
      <div class="_tag_s20jy_11">
        <button class="_header_s20jy_14  _header_medium_s20jy_75"
                aria-expanded="false"
                type="button"
        >
          <div class="_titleWrapper_s20jy_80">
            <div class="_title_s20jy_80 _title_medium_s20jy_104">
              Meg selv
            </div>
            <p class="_subtitle_s20jy_111">
              Beskrivelse
            </p>
          </div>
          <div class="_iconWrapper_s20jy_84 _iconWrapper_medium_s20jy_90">
            <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_s20jy_18 _chevron_medium_s20jy_33 _chevron_closed_s20jy_30"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
              </path>
            </svg>
          </div>
        </button>
      </div>
    </div>
  </div>
  <div class="_accordion_graphite_1hopi_17 bottomSpacingXL">
    <div class="_accordionItem_s20jy_1">
      <div class="_tag_s20jy_11">
        <button class="_header_s20jy_14  _header_medium_s20jy_75"
                aria-expanded="false"
                type="button"
        >
          <div class="_titleWrapper_s20jy_80">
            <div class="_title_s20jy_80 _title_medium_s20jy_104">
              Meg selv
            </div>
            <p class="_subtitle_s20jy_111">
              Beskrivelse
            </p>
          </div>
          <div class="_iconWrapper_s20jy_84 _iconWrapper_medium_s20jy_90">
            <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_s20jy_18 _chevron_medium_s20jy_33 _chevron_closed_s20jy_30"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
              </path>
            </svg>
          </div>
        </button>
      </div>
    </div>
    <div class="_accordionItem_s20jy_1">
      <div class="_tag_s20jy_11">
        <button class="_header_s20jy_14  _header_medium_s20jy_75"
                aria-expanded="false"
                type="button"
        >
          <div class="_titleWrapper_s20jy_80">
            <div class="_title_s20jy_80 _title_medium_s20jy_104">
              Meg selv
            </div>
            <p class="_subtitle_s20jy_111">
              Beskrivelse
            </p>
          </div>
          <div class="_iconWrapper_s20jy_84 _iconWrapper_medium_s20jy_90">
            <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_s20jy_18 _chevron_medium_s20jy_33 _chevron_closed_s20jy_30"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
              </path>
            </svg>
          </div>
        </button>
      </div>
    </div>
  </div>
  <div class="_accordion_ochre_1hopi_11 bottomSpacingXL">
    <div class="_accordionItem_s20jy_1">
      <div class="_tag_s20jy_11">
        <button class="_header_s20jy_14  _header_medium_s20jy_75"
                aria-expanded="false"
                type="button"
        >
          <div class="_titleWrapper_s20jy_80">
            <div class="_title_s20jy_80 _title_medium_s20jy_104">
              Meg selv
            </div>
            <p class="_subtitle_s20jy_111">
              Beskrivelse
            </p>
          </div>
          <div class="_iconWrapper_s20jy_84 _iconWrapper_medium_s20jy_90">
            <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_s20jy_18 _chevron_medium_s20jy_33 _chevron_closed_s20jy_30"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
              </path>
            </svg>
          </div>
        </button>
      </div>
    </div>
    <div class="_accordionItem_s20jy_1">
      <div class="_tag_s20jy_11">
        <button class="_header_s20jy_14  _header_medium_s20jy_75"
                aria-expanded="false"
                type="button"
        >
          <div class="_titleWrapper_s20jy_80">
            <div class="_title_s20jy_80 _title_medium_s20jy_104">
              Meg selv
            </div>
            <p class="_subtitle_s20jy_111">
              Beskrivelse
            </p>
          </div>
          <div class="_iconWrapper_s20jy_84 _iconWrapper_medium_s20jy_90">
            <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_s20jy_18 _chevron_medium_s20jy_33 _chevron_closed_s20jy_30"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
              </path>
            </svg>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tester/Accordion/Accordion WithAttributes play-test 1`] = `
<div data-test-block="true">
  <div class="dummyClassname"
       lang="nb"
       id="htmlId"
       data-testid="123ID"
  >
    <div class="_accordionItem_s20jy_1">
      <div class="_tag_s20jy_11">
        <button class="_header_s20jy_14  _header_medium_s20jy_75"
                aria-expanded="false"
                type="button"
        >
          <div class="_titleWrapper_s20jy_80">
            <div class="_title_s20jy_80 _title_medium_s20jy_104">
              Meg selv
            </div>
          </div>
          <div class="_iconWrapper_s20jy_84 _iconWrapper_medium_s20jy_90">
            <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_s20jy_18 _chevron_medium_s20jy_33 _chevron_closed_s20jy_30"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
              </path>
            </svg>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tester/Accordion/Accordion WithIconLeft smoke-test 1`] = `
<div data-test-block="true">
  <div class>
    <div class="_accordionItem_s20jy_1">
      <div class="_tag_s20jy_11">
        <button class="_header_s20jy_14 _header_iconLeft_s20jy_71 _header_medium_s20jy_75"
                aria-expanded="false"
                type="button"
        >
          <div class="_titleWrapper_s20jy_80">
            <div class="_title_s20jy_80 _title_medium_s20jy_104">
              Meg selv
            </div>
          </div>
          <div class="_iconWrapper_s20jy_84 _iconWrapper_medium_s20jy_90">
            <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_s20jy_18 _chevron_medium_s20jy_33 _chevron_closed_s20jy_30"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
              </path>
            </svg>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tester/Accordion/Accordion WithLarge smoke-test 1`] = `
<div data-test-block="true">
  <div class>
    <div class="_accordionItem_s20jy_1">
      <div class="_tag_s20jy_11">
        <button class="_header_s20jy_14  _header_large_s20jy_75"
                aria-expanded="false"
                type="button"
        >
          <div class="_titleWrapper_s20jy_80">
            <div class="_title_s20jy_80 _title_large_s20jy_107">
              Meg selv
            </div>
          </div>
          <div class="_iconWrapper_s20jy_84 _iconWrapper_large_s20jy_93">
            <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_s20jy_18 _chevron_large_s20jy_36 _chevron_closed_s20jy_30"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
              </path>
            </svg>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tester/Accordion/Accordion WithMedium smoke-test 1`] = `
<div data-test-block="true">
  <div class>
    <div class="_accordionItem_s20jy_1">
      <div class="_tag_s20jy_11">
        <button class="_header_s20jy_14  _header_medium_s20jy_75"
                aria-expanded="false"
                type="button"
        >
          <div class="_titleWrapper_s20jy_80">
            <div class="_title_s20jy_80 _title_medium_s20jy_104">
              Meg selv
            </div>
          </div>
          <div class="_iconWrapper_s20jy_84 _iconWrapper_medium_s20jy_90">
            <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_s20jy_18 _chevron_medium_s20jy_33 _chevron_closed_s20jy_30"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
              </path>
            </svg>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tester/Accordion/Accordion WithRef play-test 1`] = `
<div data-test-block="true">
  <div class
       id="dummyIdForwardedFromRef"
  >
    <div class="_accordionItem_s20jy_1">
      <div class="_tag_s20jy_11">
        <button class="_header_s20jy_14  _header_medium_s20jy_75"
                aria-expanded="false"
                type="button"
        >
          <div class="_titleWrapper_s20jy_80">
            <div class="_title_s20jy_80 _title_medium_s20jy_104">
              Meg selv
            </div>
          </div>
          <div class="_iconWrapper_s20jy_84 _iconWrapper_medium_s20jy_90">
            <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_s20jy_18 _chevron_medium_s20jy_33 _chevron_closed_s20jy_30"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
              </path>
            </svg>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tester/Accordion/Accordion WithSmall smoke-test 1`] = `
<div data-test-block="true">
  <div class>
    <div class="_accordionItem_s20jy_1">
      <div class="_tag_s20jy_11">
        <button class="_header_s20jy_14"
                aria-expanded="false"
                type="button"
        >
          <div class="_titleWrapper_s20jy_80">
            <div class="_title_s20jy_80">
              Meg selv
            </div>
          </div>
          <div class="_iconWrapper_s20jy_84">
            <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_s20jy_18  _chevron_closed_s20jy_30"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
              </path>
            </svg>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;
